Fix spacing between invite-friends head and body.

--- a/app/assets/stylesheets/_deprecated.css.sass
+++ b/app/assets/stylesheets/_deprecated.css.sass
@@ -410,7 +410,6 @@ a.nav-username:hover
 
 .invite-friends
   position: relative
-  overflow: hidden
   width: 100%
   padding-bottom: 3px
   background: #e4eff7
